# NewDOS-CLI-Operating-System

./: .gitignore  Cargo.toml  LICENSE  README.md  devmessage.txt  x86_64-newdos.json
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
