[package]
name = "NewDOS-CLI-Operating-System"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.11", features = ["uefi"] }
heapless = "0.8"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
linked_list_allocator = "0.10"
pc-keyboard = "0.7"
pic8259 = "0.10"
spin = "0.9"
volatile = "0.5"
x86_64 = "0.14"
